--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
     ================================================== -->
 <div class="hero-background">
     <div>
-        <img class="strips" src="assets/images/strips.png">
+        <img class="strips" src="strips.png">
     </div>
     <div class="container">
         <div class="header-container header">
-            <a class="navbar-brand logo" href="#"> <img class="logo" src="assets/images/logo sin fondo.png" alt="logo de PanamaVida+60"/> </a>
+            <a class="navbar-brand logo" href="#"> <img class="logo" src="logo sin fondo.png" alt="logo de PanamaVida+60"/> </a>
             <a href="https://www.canva.com/design/DAGIVi7N5kU/b2fXMrysii3Oq7S0Fx120A/edit?utm_content=DAGIVi7N5kU&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">
                 <button class="header-btn"> Descarga GRATIS! </button>
             </a>
@@ -58,7 +58,7 @@
             </div><!--hero-left-->
 
             <div class="col-sm-6 col-sm-6 ipad">
-                <img class="ipad-screen img-responsive" src="assets/images/Imagen Promocional PanamaVida+60.png"/>
+                <img class="ipad-screen img-responsive" src="Imagen Promocional PanamaVida+60.png"/>
             </div>
 
             <div><img class="mouse" src="assets/images/mouse.svg"/></div>
