--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <img class="ipad-screen img-responsive" src="Imagen Promocional PanamaVida+60.png"/>
             </div>
 
-            <div><img class="mouse" src="assets/images/mouse.svg"/></div>
+            <div><img class="mouse" src="mouse.svg"/></div>
 
         </div><!--hero-->
 
@@ -82,7 +82,7 @@
         <div class="col-sm-4 feature">
 
             <div class="feature-icon feature-no-display">
-                <img class="feature-img" src="assets/images/responsive.svg">
+                <img class="feature-img" src="responsive.svg">
             </div>
             <h5 class="feature-head-text feature-no-display"> DISEÑO AMIGABLE </h5>
             <p class="feature-subtext light feature-no-display">La app es sencilla e intuitiva, 
@@ -91,7 +91,7 @@
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-mid">
-                <img class="feature-img" src="assets/images/customizable.svg">
+                <img class="feature-img" src="customizable.svg">
             </div>
             <h5 class="feature-head-text feature-no-display feature-display-mid"> MONITOREA TU SALUD </h5>
             <p class="feature-subtext light feature-no-display feature-display-mid"> Compatible con 
@@ -101,7 +101,7 @@
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-last">
-                <img class="bullet-img" src="assets/images/design.svg">
+                <img class="bullet-img" src="design.svg">
             </div>
             <h5 class="feature-head-text feature-no-display feature-display-last"> CONTROLA TUS MEDICAMENTOS </h5>
             <p class="feature-subtext light feature-no-display feature-display-last"> Facilita la auto-gestiona de medicamentos.
@@ -117,7 +117,7 @@
 <div class="white-section row">
 
     <div class="imac col-sm-6">
-        <img class="imac-screen img-responsive" src="assets/images/Imagen Ilustrativa.png">
+        <img class="imac-screen img-responsive" src="Imagen Ilustrativa.png">
     </div>
     <!--imac-->
 
