--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
             <div class="plan">
                 <h3 class="plan-title light">Noticias</h3>
                 <div>
-                    <img src="assets/images/noticias.png" alt="Noticias">
+                    <img src="noticias.png" alt="Noticias">
                 </div>
                 <ul class="plan-features">
                     <li>Adicione su centro medico usual</li>
@@ -177,7 +177,7 @@
             <div class="mid-plan">
                 <h3 class="plan-title bold">Emergencias</h3>
                     <div>
-                        <img src="assets/images/emergencia.png" alt="Emergencias">
+                        <img src="emergencia.png" alt="Emergencias">
                     </div>
                 <ul class="plan-features">
                     <li>Agrega 3 contactos</li>
@@ -198,7 +198,7 @@
             <div class="plan">
                 <h3 class="plan-title light">Denuncias</h3>
                 <div>
-                    <img src="assets/images/denuncia.png" alt="Denuncias">
+                    <img src="denuncia.png" alt="Denuncias">
                 </div>
                 <ul class="plan-features">
                     <li>De forma Anonima</li>
@@ -230,58 +230,58 @@
 
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/Alianys Garcia pic.png">
+            <img src="Alianys Garcia pic.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">CEO</h4>
                 <h5 class="bold">Alianys Garcia</h5>
                 <p class="light">Quien toma las riendas del equipo y planea las estrategias </p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
+                <a href="http://www.twitter.com"><img class="team-social-icon" src="team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
+                                                       src="team-facebook.svg"></a>
                 <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
+                                                        src="team-google.svg"></a>
             </div>
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/Abraham Magin pic.png">
+            <img src="Abraham Magin pic.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">Cybersecurity Director</h4>
                 <h5 class="bold">Abraham Magin</h5>
                 <p class="light">Mantiene tus datos personales seguros</p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
+                <a href="http://www.twitter.com"><img class="team-social-icon" src="team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
+                                                       src="team-facebook.svg"></a>
                 <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
+                                                        src="team-google.svg"></a>
             </div>
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/Luis Lew pic.png">
+            <img src="Luis Lew pic.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">UX/UI Designer</h4>
                 <h5 class="bold">Luis Lew</h5>
                 <p class="light">Le da el aspecto agradable a la app </p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
+                <a href="http://www.twitter.com"><img class="team-social-icon" src="team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
+                                                       src="team-facebook.svg"></a>
                 <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
+                                                        src="team-google.svg"></a>
             </div>
         </div>
 
         <div class="col-sm-4 team-member">
-            <img src="assets/images/Claudia Lew Pic.png">
+            <img src="Claudia Lew Pic.png">
             <div class="team-member-text">
                 <h4 class="team-member-position light">CTO</h4>
                 <h5 class="bold">Claudia Lew</h5>
                 <p class="light">Impulsando la excelencia tecnologica</p>
-                <a href="http://www.twitter.com"><img class="team-social-icon" src="assets/images/team-twitter.svg"></a>
+                <a href="http://www.twitter.com"><img class="team-social-icon" src="team-twitter.svg"></a>
                 <a href="http://www.facebook.com"><img class="team-social-icon"
-                                                       src="assets/images/team-facebook.svg"></a>
+                                                       src="team-facebook.svg"></a>
                 <a href="https://plus.google.com/"><img class="team-social-icon"
-                                                        src="assets/images/team-google.svg"></a>
+                                                        src="team-google.svg"></a>
             </div>
 
         </div>
