--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-sm-4 feature">
 
             <div class="feature-icon feature-no-display">
-                <img class="feature-img" src="responsive.svg">
+                <img class="feature-img" src="responsive.jpg">
             </div>
             <h5 class="feature-head-text feature-no-display"> DISEÑO AMIGABLE </h5>
             <p class="feature-subtext light feature-no-display">La app es sencilla e intuitiva, 
@@ -91,7 +91,7 @@
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-mid">
-                <img class="feature-img" src="customizable.svg">
+                <img class="feature-img" src="customizable.jpg">
             </div>
             <h5 class="feature-head-text feature-no-display feature-display-mid"> MONITOREA TU SALUD </h5>
             <p class="feature-subtext light feature-no-display feature-display-mid"> Compatible con 
@@ -101,7 +101,7 @@
 
         <div class="col-sm-4 feature">
             <div class="feature-icon feature-no-display feature-display-last">
-                <img class="bullet-img" src="design.svg">
+                <img class="bullet-img" src="design.jpg">
             </div>
             <h5 class="feature-head-text feature-no-display feature-display-last"> CONTROLA TUS MEDICAMENTOS </h5>
             <p class="feature-subtext light feature-no-display feature-display-last"> Facilita la auto-gestiona de medicamentos.
