--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
         <div class="col-sm-4 feature">
 
             <div class="feature-icon feature-no-display">
-                <img class="feature-img" src="responsive.jpg">
+                <img class="feature-img" src="https://i.ibb.co/GFnCtWw/customizable.jpg" alt="customizable">
             </div>
             <h5 class="feature-head-text feature-no-display"> DISEÑO AMIGABLE </h5>
             <p class="feature-subtext light feature-no-display">La app es sencilla e intuitiva, 
