--- a/index.html
+++ b/index.html
@@ -81,11 +81,11 @@
 
         <div class="col-sm-4 feature">
 
-            <div class="feature-icon feature-no-display">
-                <img class="feature-img" src="https://i.ibb.co/GFnCtWw/customizable.jpg" alt="customizable">
+            <div class="feature-icon">
+                <img class="feature-img" src="customizable.svg" alt="customizable">
             </div>
-            <h5 class="feature-head-text feature-no-display"> DISEÑO AMIGABLE </h5>
-            <p class="feature-subtext light feature-no-display">La app es sencilla e intuitiva, 
+            <h5 class="feature-head-text"> DISEÑO AMIGABLE </h5>
+            <p class="feature-subtext light">La app es sencilla e intuitiva, 
                 compatible con talkback por lo que es accesible para personas ciegas o de baja vision.</p>
         </div>
 
