--- a/index.html
+++ b/index.html
@@ -90,21 +90,21 @@
         </div>
 
         <div class="col-sm-4 feature">
-            <div class="feature-icon feature-no-display feature-display-mid">
-                <img class="feature-img" src="customizable.jpg">
+            <div class="feature-icon feature-display-mid">
+                <img class="feature-img" src="customizable.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display feature-display-mid"> MONITOREA TU SALUD </h5>
-            <p class="feature-subtext light feature-no-display feature-display-mid"> Compatible con 
+            <h5 class="feature-head-text feature-display-mid"> MONITOREA TU SALUD </h5>
+            <p class="feature-subtext light  feature-display-mid"> Compatible con 
                 pulseras inteligentes, glucometros y demas equipo medico inteligente. Observe y lleve 
                 registro de sus diversos datos medicos.</p>
         </div>
 
         <div class="col-sm-4 feature">
-            <div class="feature-icon feature-no-display feature-display-last">
-                <img class="bullet-img" src="design.jpg">
+            <div class="feature-icon feature-display-last">
+                <img class="bullet-img" src="design.svg">
             </div>
-            <h5 class="feature-head-text feature-no-display feature-display-last"> CONTROLA TUS MEDICAMENTOS </h5>
-            <p class="feature-subtext light feature-no-display feature-display-last"> Facilita la auto-gestiona de medicamentos.
+            <h5 class="feature-head-text feature-display-last"> CONTROLA TUS MEDICAMENTOS </h5>
+            <p class="feature-subtext light feature-display-last"> Facilita la auto-gestiona de medicamentos.
                 Sigue siendo indepediente en todo momento.</p>
         </div>
 
